Update static content

--- a/functions/translate/localizations/de.json
+++ b/functions/translate/localizations/de.json
@@ -102,7 +102,7 @@
     "New password": "Neues Passwort",
     "New password and its confirmation do not match": "Das neue Passwort und die Bestätigung unterscheiden sich",
     "Newest Entries": "Neueste Einträge",
-    "News around Scanarium": "Aktuelles zu Scanarium",
+    "News around Scanarium": "Neues rund um Scanarium",
     "No content provided for feedback. Either provide a message, or attach the last failed image.": "Feedback ist leer. Gib entweder eine Nachricht ein oder schicke das letzte fehlgeschlagene Bild mit.",
     "No image selected. Upload aborted.": "Kein Bild ausgewählt. Hochladen abgebrochen",
     "Online Help": "Online-Hilfe",
@@ -243,6 +243,7 @@
       "PoliceCar": "Polizeiauto",
       "QuadBike": "Quad",
       "RoundBug": "Rundkäfer",
+      "Satellite": "Satellit",
       "SemiTrailerBox": "Kofferauflieger",
       "SemiTrailerTank": "Tankauflieger",
       "SemiTruckCabOver": "Zugmaschine Frontlenker",
@@ -251,9 +252,13 @@
       "SimpleRocket": "Einfache Rakete",
       "SkiingChildTuck": "Skifahrendes Kind Hocke",
       "SkiingChildUpright": "Skifahrendes Kind aufrecht",
+      "Sled": "Schlitten",
+      "SnowboardingChild": "Snowboardendes Kind",
       "SportsCar": "Sportwagen",
+      "SpringFairy": "Frühlingsfee",
       "Star": "Stern",
       "SteerableBob": "Lenkbob",
+      "StretchLimousine": "Stretch-Limo",
       "SubcompactCar": "Kleinwagen",
       "TailedButterfly": "Geschweifter Schmetterling",
       "Tit": "Meise",
