--- a/functions/translate/localizations/en.json
+++ b/functions/translate/localizations/en.json
@@ -54,6 +54,7 @@
       "PoliceCar": "Police Car",
       "QuadBike": "Quad Bike",
       "RoundBug": "Round Bug",
+      "Satellite": "Satellite",
       "SemiTrailerBox": "Semi-Trailer Box",
       "SemiTrailerTank": "Semi-Trailer Tank",
       "SemiTruckCabOver": "Semi-Truck Cab-Over",
@@ -62,9 +63,13 @@
       "SimpleRocket": "Simple Rocket",
       "SkiingChildTuck": "Skiing Child Tuck",
       "SkiingChildUpright": "Skiing Child Upright",
+      "Sled": "Sled",
+      "SnowboardingChild": "Snowboarding Child",
       "SportsCar": "Sports Car",
+      "SpringFairy": "Spring Fairy",
       "Star": "Star",
       "SteerableBob": "Steerable Bob",
+      "StretchLimousine": "Stretch Limousine",
       "SubcompactCar": "Subcompact Car",
       "TailedButterfly": "Tailed Butterfly",
       "Tractor": "Tractor",
