Update static content

--- a/functions/translate/localizations/de.json
+++ b/functions/translate/localizations/de.json
@@ -60,6 +60,7 @@
     "Failed to load parameters for undistortion from \"{file_name}\"": "Konnte Entzerr-Parameter nicht von \"{file_name}\" laden",
     "Failed to open camera \"{source}\"": "Konnte Kamera \"{source}\" nicht öffnen",
     "Failed to parse \"{stripped}\" of source \"{source}\" to number": "Konnte \"{stripped}\" von \"{source}\" nicht als Zahl lesen",
+    "Failed to parse configuration \"{value}\" for {group}.{key}": "Konnte Konfigurationswert \"{value}\" für {group}.{key} nicht verarbeiten",
     "Failed to scan new actor drawing for {actor_name}": "Einscannen von Zeichnung \"{actor_name}\" schlug fehl",
     "Failed to scan new actor drawing for {actor_name} for scene {scene_name}": "Einscannen von Zeichnung \"{actor_name}\" für Szene \"{scene_name}\" schlug fehl",
     "Feedback / Comments / Issue Reports": "Feedback / Kommentare / Probleme",
@@ -203,9 +204,16 @@
       "BroadBug": "Breitwanze",
       "BunnyBalloon": "Hasen-Luftballon",
       "Bus": "Autobus",
+      "CarWithAdultLongHaired": "Wagen mit Erwachsenem (langhaarig)",
+      "CarWithAdultShortHaired": "Wagen mit Erwachsenem (kurzhaarig)",
+      "CarWithChildLongHaired": "Wagen mit Kind (langhaarig)",
+      "CarWithChildShortHaired": "Wagen mit Kind (kurzhaarig)",
       "CompactMpv": "Kompakt Van",
-      "DragonBalloon": "Drachen-Ballon",
+      "DogStarterCar": "Hunde-Startwagen",
+      "DragonBalloon": "Drachen-Luftballon",
+      "DragonShipStarterCar": "Drachenschiff-Startwagen",
       "FireTruck": "Feuerwehrauto",
+      "FlamingoStarterCar": "Flamingo-Startwagen",
       "FlowerFairy": "Blumenfee",
       "FlyingSaucer": "Fliegende Untertasse",
       "HeartBalloon": "Herz-Luftballon",
@@ -214,20 +222,26 @@
       "MonsterTruck": "Monster-Truck",
       "OldFamilyCar": "Altes Familienauto",
       "Parrot": "Papagei",
+      "Peanuncle": "Erdnussmuckel",
+      "PhotoAdventWreath": "Foto Adventkranz",
       "PhotoBirthdayCake": "Foto Geburtstagstorte",
       "PhotoCastleRuin": "Foto Burgruine",
       "PhotoChild": "Foto Kind",
       "PhotoChildPresenting": "Foto Kind beim Herzeigen",
+      "PhotoChildWithFlag": "Foto Kind mit Flagge",
       "PhotoChildWithSchoolCone": "Foto Kind mit Schultüte",
       "PhotoChristmasTree": "Foto Weihnachtsbaum",
+      "PhotoDinosaur": "Foto Dinosaurier",
       "PhotoFace": "Foto Gesicht",
       "PhotoGhostCostume": "Foto Geist-Verkleidung",
       "PhotoMan": "Foto Mann",
       "PhotoManAndChild": "Foto Mann und Kind",
       "PhotoPumpkin": "Foto Kürbis",
       "PhotoRacingCar": "Foto Rennauto",
+      "PhotoSorcererCostume": "Foto Zaubererverkleidung",
       "PhotoTwoChildren": "Foto zwei Kinder",
       "PhotoUnicorn": "Foto Einhorn",
+      "PhotoWitchCostume": "Foto Hexenverkleidung",
       "PhotoWoman": "Foto Frau",
       "PhotoWomanAndChild": "Foto Frau und Kind",
       "PlainBalloon": "Einfacher Luftballon",
@@ -249,16 +263,20 @@
       "SemiTruckCabOver": "Zugmaschine Frontlenker",
       "SemiTruckConventionalCab": "Zugmaschine Haubenlenker",
       "SimpleButterfly": "Schlichter Schmetterling",
+      "SimpleCar": "Einfacher Wagen",
       "SimpleRocket": "Einfache Rakete",
       "SkiingChildTuck": "Skifahrendes Kind Hocke",
       "SkiingChildUpright": "Skifahrendes Kind aufrecht",
       "Sled": "Schlitten",
+      "SlurryTankerSplashPlate": "Güllefass (Prallteller)",
       "SnowboardingChild": "Snowboardendes Kind",
+      "SpaceLaunchRocket": "Schwere Trägerrakete",
       "SportsCar": "Sportwagen",
       "SpringFairy": "Frühlingsfee",
       "Star": "Stern",
       "SteerableBob": "Lenkbob",
       "StretchLimousine": "Stretch-Limo",
+      "Stumpling": "Stumpfling",
       "SubcompactCar": "Kleinwagen",
       "TailedButterfly": "Geschweifter Schmetterling",
       "Tit": "Meise",
@@ -340,6 +358,7 @@
       "highway": "Landstraße",
       "photos": "Fotos",
       "piste": "Skipiste",
+      "rollercoaster": "Achterbahn",
       "space": "Weltall"
     },
     "site": {
