--- a/functions/translate/localizations/en.json
+++ b/functions/translate/localizations/en.json
@@ -15,9 +15,13 @@
       "BroadBug": "Broad Bug",
       "BunnyBalloon": "Bunny Balloon",
       "Bus": "Bus",
+      "CarWithChildShortHaired": "Car with Child (short-haired)",
       "CompactMpv": "Compact MPV",
+      "DogStarterCar": "Dog Starter Car",
       "DragonBalloon": "Dragon Balloon",
+      "DragonShipStarterCar": "Dragon Ship Starter Car",
       "FireTruck": "Fire Truck",
+      "FlamingoStarterCar": "Flamingo Starter Car",
       "FlowerFairy": "Flower Fairy",
       "FlyingSaucer": "Flying Saucer",
       "HeartBalloon": "Heart Balloon",
@@ -25,20 +29,26 @@
       "LongBug": "Long Bug",
       "MonsterTruck": "Monster Truck",
       "OldFamilyCar": "Old Family Car",
+      "Peanuncle": "Peanuncle",
+      "PhotoAdventWreath": "Photo Advent Wreath",
       "PhotoBirthdayCake": "Photo Birthday Cake",
       "PhotoCastleRuin": "Photo Castle Ruin",
       "PhotoChild": "Photo Child",
       "PhotoChildPresenting": "Photo Child Presenting",
+      "PhotoChildWithFlag": "Photo Child with Flag",
       "PhotoChildWithSchoolCone": "Photo Child with school cone",
       "PhotoChristmasTree": "Photo Christmas Tree",
+      "PhotoDinosaur": "Photo Dinosaur",
       "PhotoFace": "Photo Face",
       "PhotoGhostCostume": "Photo Ghost Costume",
       "PhotoMan": "Photo Man",
       "PhotoManAndChild": "Photo Man and Child",
       "PhotoPumpkin": "Photo Pumpkin",
       "PhotoRacingCar": "Photo Racing Car",
+      "PhotoSorcererCostume": "Photo Sorcerer Costume",
       "PhotoTwoChildren": "Photo two Children",
       "PhotoUnicorn": "Photo Unicorn",
+      "PhotoWitchCostume": "Photo Witch Costume",
       "PhotoWoman": "Photo Woman",
       "PhotoWomanAndChild": "Photo Woman and Child",
       "PlainBalloon": "Plain Balloon",
@@ -60,16 +70,20 @@
       "SemiTruckCabOver": "Semi-Truck Cab-Over",
       "SemiTruckConventionalCab": "Semi-Truck Conventional Cab",
       "SimpleButterfly": "Simple Butterfly",
+      "SimpleCar": "Simple Car",
       "SimpleRocket": "Simple Rocket",
       "SkiingChildTuck": "Skiing Child Tuck",
       "SkiingChildUpright": "Skiing Child Upright",
       "Sled": "Sled",
+      "SlurryTankerSplashPlate": "Slurry Tanker (Splash Plate)",
       "SnowboardingChild": "Snowboarding Child",
+      "SpaceLaunchRocket": "Space Launch Rocket",
       "SportsCar": "Sports Car",
       "SpringFairy": "Spring Fairy",
       "Star": "Star",
       "SteerableBob": "Steerable Bob",
       "StretchLimousine": "Stretch Limousine",
+      "Stumpling": "Stumpling",
       "SubcompactCar": "Subcompact Car",
       "TailedButterfly": "Tailed Butterfly",
       "Tractor": "Tractor",
@@ -139,6 +153,7 @@
       "highway": "Highway",
       "photos": "Photos",
       "piste": "Piste",
+      "rollercoaster": "Roller Coaster",
       "space": "Space"
     }
   }
